--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -415,12 +415,12 @@ Edward Coristine:
     source: https://www.nbcnews.com/politics/donald-trump/live-blog/trump-france-emmanuel-macron-white-house-ukraine-tariffs-live-updates-rcna193386#rcrd73638
   - agency: Centers for Medicare and Medicaid Services
     date: '2025-03-05'
-    event: Edward Coristine is detailed to HHS from GSA, where he is reported as an employee
+    event: Edward Coristine is detailed to HHS from GSA, where he is reported as an employee. He is also detailed to USDS.
     name: Edward Coristine
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   - agency: Centers for Medicare and Medicaid Services
     date: '2025-03-05'
-    event: Edward Coristine and Marko Elez are granted read-only access to the CMS Acquisition Lifecycle Modernization (CALM) system. She is reportedly not granted access to other systems.
+    event: Edward Coristine and Marko Elez are granted read-only access to the CMS Acquisition Lifecycle Modernization (CALM) system.
     name: Edward Coristine
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   - agency: Centers for Medicare and Medicaid Services
@@ -1165,7 +1165,7 @@ Marko Elez:
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   - agency: Centers for Medicare and Medicaid Services
     date: '2025-03-05'
-    event: Edward Coristine and Marko Elez are granted read-only access to the CMS Acquisition Lifecycle Modernization (CALM) system. She is reportedly not granted access to other systems.
+    event: Edward Coristine and Marko Elez are granted read-only access to the CMS Acquisition Lifecycle Modernization (CALM) system.
     name: Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   - agency: Centers for Medicare and Medicaid Services
