Notes on Edward Coristine

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -2525,6 +2525,7 @@ agencies:
     - Brian Bjelde
   - date: 2025-02-13
     event: According to a sworn declaration by a Deputy Commissioner at SSA, an unindentified DOGE staffer (Employee 1) is onboarded for "duties currently relate to improper payments and SSA's Death Master File" and they are also planning to detail him to the Small Business Administration
+    comment: This is likely Edward Coristine, given testimony he was detailed from HHS to SBA
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   - date: 2025-02-14
     event: Leland Dudek is placed on administrative leave while under investigation that he committed inappropriate actions to help DOGE
